# StocksAnalysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
stock_data/: __init__.py  charting.py  cli.py  config.py  database.py  downloader.py  exporter.py  service.py  symbols.py  webapp.py  webbuild.py
tests/: test_charting.py  test_database.py  test_dependencies.py  test_downloader.py  test_symbols.py  test_webapp.py
us_stock_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
web/: index.html  package-lock.json  package.json
web/src/: api.ts  indicators.test.ts  indicators.ts  interaction-fixes.css  main.ts  style.css
