[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "us-stock-data"
version = "1.0.0"
description = "Portable Yahoo Finance downloader backed by SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1,<3",
    # repair=True uses yfinance's optional SciPy-based price-repair code.
    "yfinance[repair]>=1.0,<2",
]

[project.scripts]
stock-data = "stock_data.cli:main"

[tool.setuptools.packages.find]
include = ["stock_data*"]
